--- a/Geoid/Base.lproj/MainMenu.xib
+++ b/Geoid/Base.lproj/MainMenu.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8191"/>
+        <plugIn identifier="com.apple.MapKitIBPlugin" version="8191"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -14,6 +15,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
+                <outlet property="mapView" destination="K9l-yL-Jba" id="TWc-Jq-pO8"/>
                 <outlet property="outputDisplay" destination="H32-Rs-BLt" id="cx1-k1-gau"/>
                 <outlet property="tableView" destination="95g-jQ-RF1" id="sFs-vx-dDy"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
@@ -116,53 +118,20 @@
         <window title="Geoid" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="1015" height="702"/>
+            <rect key="contentRect" x="335" y="390" width="1228" height="579"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
             <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="1015" height="702"/>
+                <rect key="frame" x="0.0" y="0.0" width="1228" height="579"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q9d-Wy-Raq">
-                        <rect key="frame" x="20" y="20" width="975" height="320"/>
-                        <clipView key="contentView" ambiguous="YES" id="bNS-Wy-Zt0">
-                            <rect key="frame" x="1" y="1" width="973" height="318"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <subviews>
-                                <textView ambiguous="YES" editable="NO" importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="H32-Rs-BLt">
-                                    <rect key="frame" x="0.0" y="0.0" width="973" height="318"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <animations/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="973" height="318"/>
-                                    <size key="maxSize" width="975" height="10000000"/>
-                                    <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                    <size key="minSize" width="973" height="318"/>
-                                    <size key="maxSize" width="975" height="10000000"/>
-                                </textView>
-                            </subviews>
-                            <animations/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </clipView>
-                        <animations/>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="km9-Sc-rVA">
-                            <rect key="frame" x="-100" y="-100" width="87" height="18"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                            <animations/>
-                        </scroller>
-                        <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="muv-GX-ZSG">
-                            <rect key="frame" x="958" y="1" width="16" height="318"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                            <animations/>
-                        </scroller>
-                    </scrollView>
                     <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8L1-6w-eLZ">
-                        <rect key="frame" x="20" y="354" width="975" height="328"/>
+                        <rect key="frame" x="20" y="254" width="493" height="305"/>
                         <clipView key="contentView" ambiguous="YES" id="3nN-Ny-C1D">
-                            <rect key="frame" x="1" y="23" width="973" height="304"/>
+                            <rect key="frame" x="1" y="23" width="491" height="281"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="sequential" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="2Qc-Id-lrh" id="95g-jQ-RF1">
-                                    <rect key="frame" x="0.0" y="0.0" width="1255" height="304"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="1255" height="281"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
                                     <size key="intercellSpacing" width="3" height="2"/>
@@ -320,7 +289,7 @@
                         </clipView>
                         <animations/>
                         <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="XU8-nn-hgL">
-                            <rect key="frame" x="1" y="311" width="973" height="16"/>
+                            <rect key="frame" x="1" y="288" width="491" height="16"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <animations/>
                         </scroller>
@@ -335,10 +304,47 @@
                             <animations/>
                         </tableHeaderView>
                     </scrollView>
+                    <mapView fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="K9l-yL-Jba">
+                        <rect key="frame" x="521" y="20" width="687" height="539"/>
+                        <animations/>
+                    </mapView>
+                    <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q9d-Wy-Raq">
+                        <rect key="frame" x="20" y="20" width="493" height="226"/>
+                        <clipView key="contentView" ambiguous="YES" id="bNS-Wy-Zt0">
+                            <rect key="frame" x="1" y="1" width="491" height="224"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <subviews>
+                                <textView ambiguous="YES" editable="NO" importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="H32-Rs-BLt">
+                                    <rect key="frame" x="0.0" y="0.0" width="491" height="224"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <animations/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <size key="minSize" width="491" height="224"/>
+                                    <size key="maxSize" width="975" height="10000000"/>
+                                    <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <size key="minSize" width="491" height="224"/>
+                                    <size key="maxSize" width="975" height="10000000"/>
+                                </textView>
+                            </subviews>
+                            <animations/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </clipView>
+                        <animations/>
+                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="km9-Sc-rVA">
+                            <rect key="frame" x="-100" y="-100" width="87" height="18"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <animations/>
+                        </scroller>
+                        <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="muv-GX-ZSG">
+                            <rect key="frame" x="476" y="1" width="16" height="224"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <animations/>
+                        </scroller>
+                    </scrollView>
                 </subviews>
                 <animations/>
             </view>
-            <point key="canvasLocation" x="97.5" y="219"/>
+            <point key="canvasLocation" x="204" y="157.5"/>
         </window>
     </objects>
 </document>
