--- a/Geoid/Base.lproj/MainMenu.xib
+++ b/Geoid/Base.lproj/MainMenu.xib
@@ -304,7 +304,7 @@
                             <animations/>
                         </tableHeaderView>
                     </scrollView>
-                    <mapView fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="K9l-yL-Jba">
+                    <mapView fixedFrame="YES" mapType="hybrid" pitchEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K9l-yL-Jba">
                         <rect key="frame" x="521" y="20" width="687" height="539"/>
                         <animations/>
                     </mapView>
