--- a/Geoid/Base.lproj/MainMenu.xib
+++ b/Geoid/Base.lproj/MainMenu.xib
@@ -124,21 +124,54 @@
                 <rect key="frame" x="0.0" y="0.0" width="1228" height="579"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q9d-Wy-Raq">
+                        <rect key="frame" x="20" y="50" width="493" height="230"/>
+                        <clipView key="contentView" ambiguous="YES" id="bNS-Wy-Zt0">
+                            <rect key="frame" x="1" y="1" width="491" height="228"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <subviews>
+                                <textView ambiguous="YES" editable="NO" importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="H32-Rs-BLt">
+                                    <rect key="frame" x="0.0" y="0.0" width="491" height="228"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <animations/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <size key="minSize" width="491" height="228"/>
+                                    <size key="maxSize" width="975" height="10000000"/>
+                                    <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <size key="minSize" width="491" height="228"/>
+                                    <size key="maxSize" width="975" height="10000000"/>
+                                </textView>
+                            </subviews>
+                            <animations/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </clipView>
+                        <animations/>
+                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="km9-Sc-rVA">
+                            <rect key="frame" x="-100" y="-100" width="87" height="18"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <animations/>
+                        </scroller>
+                        <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="muv-GX-ZSG">
+                            <rect key="frame" x="476" y="1" width="16" height="228"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <animations/>
+                        </scroller>
+                    </scrollView>
                     <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8L1-6w-eLZ">
-                        <rect key="frame" x="20" y="254" width="493" height="305"/>
+                        <rect key="frame" x="20" y="288" width="493" height="271"/>
                         <clipView key="contentView" ambiguous="YES" id="3nN-Ny-C1D">
-                            <rect key="frame" x="1" y="23" width="491" height="281"/>
+                            <rect key="frame" x="1" y="23" width="491" height="247"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="sequential" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="2Qc-Id-lrh" id="95g-jQ-RF1">
-                                    <rect key="frame" x="0.0" y="0.0" width="1255" height="281"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="1271" height="247"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                     <tableColumns>
-                                        <tableColumn identifier="time" editable="NO" width="116" minWidth="40" maxWidth="1000" id="fGI-cL-Psb">
+                                        <tableColumn identifier="time" editable="NO" width="132.38671875" minWidth="40" maxWidth="1000" id="fGI-cL-Psb">
                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="center" title="Time">
                                                 <font key="font" metaFont="smallSystem"/>
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -289,7 +322,7 @@
                         </clipView>
                         <animations/>
                         <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="XU8-nn-hgL">
-                            <rect key="frame" x="1" y="288" width="491" height="16"/>
+                            <rect key="frame" x="1" y="254" width="491" height="16"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <animations/>
                         </scroller>
@@ -299,48 +332,23 @@
                             <animations/>
                         </scroller>
                         <tableHeaderView key="headerView" id="2Qc-Id-lrh">
-                            <rect key="frame" x="0.0" y="0.0" width="1255" height="23"/>
+                            <rect key="frame" x="0.0" y="0.0" width="1271" height="23"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <animations/>
                         </tableHeaderView>
                     </scrollView>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LyI-Pz-kX9">
+                        <rect key="frame" x="20" y="18" width="493" height="25"/>
+                        <animations/>
+                        <buttonCell key="cell" type="roundTextured" title="Clear Data" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="omm-8U-mmp">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                    </button>
                     <mapView fixedFrame="YES" mapType="hybrid" pitchEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K9l-yL-Jba">
                         <rect key="frame" x="521" y="20" width="687" height="539"/>
                         <animations/>
                     </mapView>
-                    <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q9d-Wy-Raq">
-                        <rect key="frame" x="20" y="20" width="493" height="226"/>
-                        <clipView key="contentView" ambiguous="YES" id="bNS-Wy-Zt0">
-                            <rect key="frame" x="1" y="1" width="491" height="224"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <subviews>
-                                <textView ambiguous="YES" editable="NO" importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="H32-Rs-BLt">
-                                    <rect key="frame" x="0.0" y="0.0" width="491" height="224"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <animations/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="491" height="224"/>
-                                    <size key="maxSize" width="975" height="10000000"/>
-                                    <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                    <size key="minSize" width="491" height="224"/>
-                                    <size key="maxSize" width="975" height="10000000"/>
-                                </textView>
-                            </subviews>
-                            <animations/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </clipView>
-                        <animations/>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="km9-Sc-rVA">
-                            <rect key="frame" x="-100" y="-100" width="87" height="18"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                            <animations/>
-                        </scroller>
-                        <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="muv-GX-ZSG">
-                            <rect key="frame" x="476" y="1" width="16" height="224"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                            <animations/>
-                        </scroller>
-                    </scrollView>
                 </subviews>
                 <animations/>
             </view>
