Added clear data functionality.

--- a/Geoid/Base.lproj/MainMenu.xib
+++ b/Geoid/Base.lproj/MainMenu.xib
@@ -119,7 +119,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="1228" height="579"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1057"/>
             <view key="contentView" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="1228" height="579"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -160,7 +160,7 @@
                     <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8L1-6w-eLZ">
                         <rect key="frame" x="20" y="288" width="493" height="271"/>
                         <clipView key="contentView" ambiguous="YES" id="3nN-Ny-C1D">
-                            <rect key="frame" x="1" y="23" width="491" height="247"/>
+                            <rect key="frame" x="1" y="0.0" width="491" height="270"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="sequential" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="2Qc-Id-lrh" id="95g-jQ-RF1">
@@ -326,8 +326,8 @@
                             <autoresizingMask key="autoresizingMask"/>
                             <animations/>
                         </scroller>
-                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="ngC-Tj-McJ">
-                            <rect key="frame" x="224" y="17" width="15" height="102"/>
+                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="ngC-Tj-McJ">
+                            <rect key="frame" x="-15" y="23" width="16" height="0.0"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <animations/>
                         </scroller>
@@ -344,6 +344,9 @@
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
+                        <connections>
+                            <action selector="clearData:" target="Voe-Tx-rLC" id="TYf-q6-PL2"/>
+                        </connections>
                     </button>
                     <mapView fixedFrame="YES" mapType="hybrid" pitchEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K9l-yL-Jba">
                         <rect key="frame" x="521" y="20" width="687" height="539"/>
