--- a/Geoid/Base.lproj/MainMenu.xib
+++ b/Geoid/Base.lproj/MainMenu.xib
@@ -77,6 +77,12 @@
                                                 <action selector="openTextDataFile:" target="Voe-Tx-rLC" id="5oF-BO-pPu"/>
                                             </connections>
                                         </menuItem>
+                                        <menuItem title="Serial Connection" id="Mqx-Bj-5Rz">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <connections>
+                                                <action selector="openSerialConnectionWindow:" target="Voe-Tx-rLC" id="HxB-av-MrY"/>
+                                            </connections>
+                                        </menuItem>
                                     </items>
                                 </menu>
                             </menuItem>
@@ -118,8 +124,8 @@
         <window title="Geoid" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="1228" height="579"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
+            <rect key="contentRect" x="0.0" y="478" width="1228" height="579"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1057"/>
             <view key="contentView" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="1228" height="579"/>
                 <autoresizingMask key="autoresizingMask"/>
